# Cevy

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  Makefile  README.md  TOOLS.md  main.cpp  shit-test.cpp  shit-test.hpp
.github/: release-drafter-major.yml  release-drafter-minor.yml  release-drafter.yml
.github/workflows/: release-draft-major.yml  release-draft-minor.yml  units-tests.yml
docs/: Cevy.md  Cevy.uxf  Getting Started.md  NetworkRFC.md  compare.md  network.uxf
docs/doxygen/: Doxyfile  header.html
docs/doxygen/xml/: App_8cpp.xml  App_8hpp.xml  Doxyfile.xml  README_8md.xml  TOOLS_8md.xml  bug.xml  classApp.xml  classMyLibrary_1_1Example.xml  classMyLibrary_1_1SecondExample.xml  classMyLibrary_1_1SubclassExample.xml  classentity.xml  classquery.xml  classsparse__array.xml  compare_8md.xml  conf_8py.xml  customization_8md.xml  deprecated.xml  dir_13e138d54eb8818da29c3992edef070a.xml  dir_359d2bec989c9a8deeeb9aee335c1c76.xml  dir_49e56c817e5e54854c35e136979f97ca.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_724e3471992785f19518e343d0021d87.xml  dir_8a63a06b97ec1e69eb6b2537b1056ef4.xml  dir_96d618733c233f02059a3dc84dbe7db7.xml  dir_a126c530d31a580b439a365344a00174.xml  dir_e222099c3c89b548c483259159ec9e69.xml  dir_f4c5fdd1b25a13cde0da7df780592f79.xml  dir_f832923ad3cb060bc87ad85e68b8a1c3.xml  dir_fa80e219cf4f418d6a928600b3ec0668.xml  docs_2doxygen_2doxygen-awesome-css_2README_8md.xml  empty_8hpp.xml  entity_8cpp.xml  entity_8hpp.xml  example_8hpp.xml  extensions_8md.xml  game__engine_8cpp.xml  game__engine_8hpp.xml  index.xml  index_8md.xml  md_README.xml  (+30 more)
docs/sphinx/source/: Compare.md  compare.md  conf.py  index.md  index.rst
docs/windows/: windows_compil.dox
includes/: test.hpp
public/: entity.hpp
src/: App.cpp  App.hpp  CMakeLists.txt  Entity.hpp  Plugin.hpp  Schedule.cpp  Schedule.hpp  World.cpp  World.hpp  cevy.cpp  cevy.hpp  entity.cpp  entity.hpp  registery.cpp  registery.hpp  registry.cpp  registry.hpp  sparse_array.cpp  sparse_array.hpp  test.cpp  zipper_iterator.cpp  zipper_iterator.hpp
src/ecs/: App.cpp  App.hpp  CMakeLists.txt  Commands.cpp  Commands.hpp  DefaultPlugin.cpp  DefaultPlugin.hpp  Entity.cpp  Entity.hpp  Event.cpp  Event.hpp  Factory.hpp  Indirect.hpp  Plugin.hpp  Query.cpp  Query.hpp  Resource.hpp  Schedule.cpp  Schedule.hpp  Scheduler.cpp  Scheduler.hpp  SparseVector.cpp  SparseVector.hpp  Stage.hpp  Time.cpp  Time.hpp  World.cpp  World.hpp  ecs.cpp  ecs.hpp  queries.hpp  sparse_array.cpp  sparse_array.hpp  zipper_iterator.cpp  zipper_iterator.hpp
src/ecs/Input/: Input.cpp  Input.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
src/ecs/commands/: CMakeLists.txt  Command.hpp  Commands.cpp  Commands.hpp  EntityCommands.cpp  EntityCommands.hpp
src/ecs/events/: CMakeLists.txt  Event.cpp  Event.hpp
src/ecs/input/: CMakeLists.txt  Input.cpp  Input.hpp  Keyboard.cpp  Mouse.hpp
src/engine/: CMakeLists.txt  Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp  Keyboard.hpp  PhysicsProps.hpp  Pointer.hpp  Position.hpp  Rotation.hpp  Stopwatch.hpp  Target.hpp  Timer.hpp  Transform.hpp  Vector.hpp  Velocity.hpp  input.hpp  raylib.hpp  velocity.hpp
src/engine/Input/: Input.cpp  Input.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
src/engine/assets/: Asset.hpp  AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  Diffuse.hpp  Handle.hpp  Mesh.hpp  assets.hpp
src/engine/input/: CMakeLists.txt  Input.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
src/engine/math/: CMakeLists.txt  Vector.cpp  Vector.hpp
src/engine/rendering/: CMakeLists.txt  ClearColor.cpp  ClearColor.hpp  Color.cpp  Color.hpp  Line.hpp  rendering.cpp  rendering.hpp
src/game_engine/: CMakeLists.txt  camera.cpp  camera.hpp  game_engine.cpp  game_engine.hpp  input.hpp  position.hpp  velocity.hpp
src/network/: Actions.hpp  CMakeLists.txt  CevyNetwork.cpp  CevyNetwork.hpp  Network.hpp  NetworkActions.hpp  NetworkBase.cpp  NetworkBase.hpp  NetworkCommands.hpp  NetworkPlugin.cpp  NetworkPlugin.hpp  Synchroniser.hpp  client.cpp  client.hpp  network.cpp  network.hpp  server.cpp  server.hpp
src/physic/: CMakeLists.txt  Physic.cpp  Physic.hpp  physic.cpp  physic.hpp
src/physic/collision/: CMakeLists.txt  Collider.cpp  Collider.hpp  CollidingEntities.hpp  EntitiesCollision.cpp  Shape.cpp  Shape.hpp
src/physics/: CMakeLists.txt  Physics.cpp  Physics.hpp
src/physics/collision/: CMakeLists.txt  Collider.cpp  Collider.hpp  EntitiesCollision.cpp  Shape.cpp  Shape.hpp
test/: CMakeLists.txt  unittest.cpp  unittest_entity.cpp  unittest_registery.cpp  unittest_sparse_array.cpp
